--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
 
 <body>
 
+    <div class="container-fluid">
+        <div class="col col-sm-9 p-3 m-auto text-center">
+            <h1 class=" header text-center fw-bolder display-2 ">khalid hasan apu</h1>
+            <h3 class="subheader fw-bolder ">Web Developer </h3>
+             </div>
+    </div>
+    
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
