--- a/index.html
+++ b/index.html
@@ -29,9 +29,41 @@
         <div class="col col-sm-9 p-3 m-auto text-center">
             <h1 class=" header text-center fw-bolder display-2 ">khalid hasan apu</h1>
             <h2 class="subheader fw-bolder ">Web Developer </h2>
-             </div>
+        </div>
     </div>
+
+    <nav class="navbar navbar-expand-lg">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav m-auto">
+                <li class="nav-item">
+                    <a class="nav-link " aria-current="page" href="#ABOUT">ABOUT</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#EDUCATION">EDUCATION</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#PROJECT">PROJECT</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#POTFOLIO">POTFOLIO</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#GALLERY">GALLERY</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#CONTACT">CONTACT</a>
+                </li>
+
+
+            </ul>
+    </nav>
+
     
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
