--- a/index.html
+++ b/index.html
@@ -62,7 +62,21 @@
             </ul>
     </nav>
 
-    
+    <div class="about-container">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-9">
+                    <h1>Khalid hasan apu</h1>
+                    <h3>Web Developer</h3>
+                    <p>Hi, I'm Khalid Hasan Apu, a seasoned Web Developer with over 10 years of experience in building dynamic, user-friendly web applications. I specialize in React.js, bringing advanced skills in creating high-performance, scalable, and responsive interfaces that provide seamless user experiences. With a deep understanding of front-end development and a passion for crafting efficient solutions, I’m committed to delivering impactful projects that meet both client and user needs.</p>
+
+                </div>
+                <div class="col-md-3">
+
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
