--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <div class="container-fluid">
         <div class="col col-sm-9 p-3 m-auto text-center">
-            <h1 class=" header text-center fw-bolder display-2 ">khalid hasan apu</h1>
+            <h1 class=" header text-center fw-bolder display-2">khalid hasan apu</h1>
             <h2 class="subheader fw-bolder ">Web Developer </h2>
         </div>
     </div>
@@ -62,13 +62,13 @@
             </ul>
     </nav>
 
-    <div class="about-container">
+    <div class="about-container" id="ABOUT">
         <div class="container ">
             <div class="row m-auto align-items-center py-5 justify-content-center">
                 <div class="col-md-9">
-                    <h1 class="text-info">Khalid hasan apu</h1>
-                    <h3>Web Developer</h3>
-                    <p class="justify-content-center">Hi, I'm Khalid Hasan Apu, a seasoned Web Developer with over 10 years of experience in building dynamic, user-friendly web applications. I specialize in React.js, bringing advanced skills in creating high-performance, scalable, and responsive interfaces that provide seamless user experiences. With a deep understanding of front-end development and a passion for crafting efficient solutions, I’m committed to delivering impactful projects that meet both client and user needs.</p>
+                    <h1 class="text-custom-color text-custom-shadow">Khalid hasan apu</h1>
+                    <h3 class="text-custom-shadow">Web Developer</h3>
+                    <p class="text-justify">Hi, I'm Khalid Hasan Apu, a seasoned Web Developer with over 10 years of experience in building dynamic, user-friendly web applications. I specialize in React.js, bringing advanced skills in creating high-performance, scalable, and responsive interfaces that provide seamless user experiences. With a deep understanding of front-end development and a passion for crafting efficient solutions, I’m committed to delivering impactful projects that meet both client and user needs.</p>
 
                 </div>
                 <div class="col-md-3">
