--- a/index.html
+++ b/index.html
@@ -61,23 +61,45 @@
 
             </ul>
     </nav>
+    <!-- about -->
 
     <div class="about-container" id="ABOUT">
         <div class="container ">
             <div class="row m-auto align-items-center py-5 justify-content-center">
-                <div class="col-md-9">
+                <div class="col-md-8">
                     <h1 class="text-custom-color text-custom-shadow">Khalid hasan apu</h1>
                     <h3 class="text-custom-shadow">Web Developer</h3>
-                    <p class="text-justify">Hi, I'm Khalid Hasan Apu, a seasoned Web Developer with over 10 years of experience in building dynamic, user-friendly web applications. I specialize in React.js, bringing advanced skills in creating high-performance, scalable, and responsive interfaces that provide seamless user experiences. With a deep understanding of front-end development and a passion for crafting efficient solutions, I’m committed to delivering impactful projects that meet both client and user needs.</p>
+                    <p class="text-justify fs-4">Hi, I'm Khalid Hasan Apu, a seasoned Web Developer with over 10 years of experience in building dynamic, user-friendly web applications. I specialize in React.js, bringing advanced skills in creating high-performance, scalable, and responsive interfaces that provide seamless user experiences. With a deep understanding of front-end development and a passion for crafting efficient solutions, I’m committed to delivering impactful projects that meet both client and user needs.</p>
 
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-4">
                     <img class="img-fluid rounded-circle border border-warning border-3"src="img/apu.jpg" alt="">
 
                 </div>
             </div>
         </div>
     </div>
+
+
+    <!-- education -->
+     <div class="education" id="EDUCATION">
+        <div class="container ">
+            <div class="row py-5">
+                <div class="col-md-4 my-auto p-3 circle">
+                    <h3 class="text-center fw-bolder">
+                        Bachelor of Science in Computer Science and Engineering. <br>
+                        Reputed University, Bangladesh <br>
+                        2016
+                    </h3>
+                </div>
+                <div class="col-md-8 my-auto px-3 border-left-custom">
+                    <p class="text-justify fs-3">
+                        Graduated with a strong foundation in software development, algorithms, and systems design. My academic background provided essential skills and knowledge that laid the groundwork for my career in web development, where I specialize in creating dynamic, user-centric web applications.
+                    </p>
+                </div>
+            </div>
+        </div>
+     </div>
 
 
 
