--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         </div>
     </div>
 
+<!-- navbar -->
     <nav class="navbar navbar-expand-lg">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,7 +47,7 @@
                     <a class="nav-link" href="#EDUCATION">EDUCATION</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#PROJECT">PROJECT</a>
+                    <a class="nav-link" href="#SKILLS">SKILLS</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#POTFOLIO">POTFOLIO</a>
@@ -109,6 +110,55 @@
         </div>
     </div>
 
+    <!-- skills -->
+    <div class="skills">
+        <div class="container py-5" id="SKILLS">
+            <div class="row">
+                <h1 class="text-center">SKILLS</h1>
+
+            </div>
+            <div class="row">
+                <div class="col skapon">
+                    <h3>HTML</h3>
+                    <div class="progress" role="progressbar" aria-label="Success example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                        <div class="progress-bar bg-success progress-bar-striped" style="width: 100%">100%</div>
+                      </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col skapon">
+                    <h3>CSS</h3>
+                    <div class="progress" role="progressbar" aria-label="Success example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                        <div class="progress-bar bg-primary progress-bar-striped" style="width: 100%">100%</div>
+                      </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col skapon">
+                    <h3>Bootstrap</h3>
+                    <div class="progress" role="progressbar" aria-label="primary example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                        <div class="progress-bar bg-secondary progress-bar-striped" style="width: 90%">90%</div>
+                      </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col skapon">
+                    <h3>JavaScript</h3>
+                    <div class="progress" role="progressbar" aria-label="Success example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                        <div class="progress-bar bg-warning progress-bar-striped" style="width: 90%">90%</div>
+                      </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col skapon">
+                    <h3>React</h3>
+                    <div class="progress" role="progressbar" aria-label="Success example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                        <div class="progress-bar bg-danger progress-bar-striped" style="width: 95%">95%</div>
+                      </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
