--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <div class="col skapon">
                     <h3>HTML</h3>
                     <div class="progress" role="progressbar" aria-label="Success example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-                        <div class="progress-bar bg-success progress-bar-striped" style="width: 100%">100%</div>
+                        <div class="progress-bar bg-success progress-bar-striped" style="width: 99%">99%</div>
                       </div>
                 </div>
             </div>
@@ -129,7 +129,7 @@
                 <div class="col skapon">
                     <h3>CSS</h3>
                     <div class="progress" role="progressbar" aria-label="Success example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-                        <div class="progress-bar bg-primary progress-bar-striped" style="width: 100%">100%</div>
+                        <div class="progress-bar bg-primary progress-bar-striped" style="width: 99%">99%</div>
                       </div>
                 </div>
             </div>
@@ -162,8 +162,27 @@
 
     <!-- portfolio -->
      <div class="container portfolio py-5">
-        <div class="row">
+        <div class="row py-5">
             <h1 class="text-center display-4">Portfolio</h1>
+            <hr>
+        </div>
+        <div class="row">
+            <div class="col-md-3 m-auto justify-content-center align-items-center">
+                <img class="img-fluid " src="img/portfolio (2).png" alt="">
+                <h1 class="text-center">Portfolio</h1>
+            </div>
+            <div class="col-md-3 justify-content-center ">
+                <img class="img-fluid " src="img/blog (2).png" alt="">
+                <h1 class="text-center">Blog</h1>
+            </div>
+            <div class="col-md-3  justify-content-center ">
+                <img class="img-fluid " src="img/casino (2).png" alt="">
+                <h1 class="text-center">Gaming</h1>
+            </div>
+            <div class="col-md-3 justify-content-center ">
+                <img class="img-fluid " src="img/ecommerce (2).png" alt="">
+                <h1 class="text-center">E-Commerce</h1>
+            </div>
         </div>
      </div>
 
