--- a/index.html
+++ b/index.html
@@ -162,25 +162,27 @@
 
     <!-- portfolio -->
      <div class="container portfolio py-5">
-        <div class="row py-5">
+        <div class="row">
             <h1 class="text-center display-4">Portfolio</h1>
             <hr>
         </div>
-        <div class="row">
-            <div class="col-md-3 m-auto justify-content-center align-items-center">
-                <img class="img-fluid " src="img/portfolio (2).png" alt="">
-                <h1 class="text-center">Portfolio</h1>
+        <div class="row mx-auto">
+            <div class="col-md-3  mx-auto justify-content-center align-items-center">
+                <img class=" mx-auto d-block" src="img/portfolio (2).png" alt="">
+                <div>
+                    <h1 class="text-center">Business</h1>
+                </div>
             </div>
-            <div class="col-md-3 justify-content-center ">
-                <img class="img-fluid " src="img/blog (2).png" alt="">
+            <div class="col-md-3 mx-auto justify-content-center align-items-center ">
+                <img class="img-fluid mx-auto d-block " src="img/blog (2).png" alt="">
                 <h1 class="text-center">Blog</h1>
             </div>
-            <div class="col-md-3  justify-content-center ">
-                <img class="img-fluid " src="img/casino (2).png" alt="">
+            <div class="col-md-3  mx-auto justify-content-center align-items-center ">
+                <img class="img-fluid mx-auto d-block" src="img/casino (2).png" alt="">
                 <h1 class="text-center">Gaming</h1>
             </div>
-            <div class="col-md-3 justify-content-center ">
-                <img class="img-fluid " src="img/ecommerce (2).png" alt="">
+            <div class="col-md-3 mx-auto justify-content-center align-items-center">
+                <img class="img-fluid mx-auto d-block" src="img/ecommerce (2).png" alt="">
                 <h1 class="text-center">E-Commerce</h1>
             </div>
         </div>
