--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
     </div>
 
-<!-- navbar -->
+    <!-- navbar -->
     <nav class="navbar navbar-expand-lg">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -120,48 +120,53 @@
             <div class="row">
                 <div class="col skapon">
                     <h3>HTML</h3>
-                    <div class="progress" role="progressbar" aria-label="Success example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                    <div class="progress" role="progressbar" aria-label="Success example" aria-valuenow="100"
+                        aria-valuemin="0" aria-valuemax="100">
                         <div class="progress-bar bg-success progress-bar-striped" style="width: 99%">99%</div>
-                      </div>
+                    </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col skapon">
                     <h3>CSS</h3>
-                    <div class="progress" role="progressbar" aria-label="Success example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                    <div class="progress" role="progressbar" aria-label="Success example" aria-valuenow="100"
+                        aria-valuemin="0" aria-valuemax="100">
                         <div class="progress-bar bg-primary progress-bar-striped" style="width: 99%">99%</div>
-                      </div>
+                    </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col skapon">
                     <h3>Bootstrap</h3>
-                    <div class="progress" role="progressbar" aria-label="primary example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                    <div class="progress" role="progressbar" aria-label="primary example" aria-valuenow="100"
+                        aria-valuemin="0" aria-valuemax="100">
                         <div class="progress-bar bg-secondary progress-bar-striped" style="width: 90%">90%</div>
-                      </div>
+                    </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col skapon">
                     <h3>JavaScript</h3>
-                    <div class="progress" role="progressbar" aria-label="Success example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                    <div class="progress" role="progressbar" aria-label="Success example" aria-valuenow="100"
+                        aria-valuemin="0" aria-valuemax="100">
                         <div class="progress-bar bg-warning progress-bar-striped" style="width: 90%">90%</div>
-                      </div>
+                    </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col skapon">
                     <h3>React</h3>
-                    <div class="progress" role="progressbar" aria-label="Success example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                    <div class="progress" role="progressbar" aria-label="Success example" aria-valuenow="100"
+                        aria-valuemin="0" aria-valuemax="100">
                         <div class="progress-bar bg-danger progress-bar-striped" style="width: 95%">95%</div>
-                      </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 
     <!-- portfolio -->
-     <div class="container portfolio py-5">
+    <div class="container portfolio py-5">
         <div class="row">
             <h1 class="text-center display-4">Portfolio</h1>
             <hr>
@@ -186,7 +191,37 @@
                 <h1 class="text-center">E-Commerce</h1>
             </div>
         </div>
-     </div>
+    </div>
+
+    <!-- contact form -->
+    <div class="container contact">
+        <div class="row m-auto">
+            <h1 class="text-center">Contact me</h1>
+        </div>
+        <div class="row py-4">
+
+            <div class="col-8 m-auto">
+                <div class="m-auto">
+                    <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1"
+                        placeholder="name@example.com">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label">Subject</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+                <button type="button" class="btn btn-success btn-outline-warning">Send</button>
+            </div>
+        </div>
+    </div>
+
+    <section class="footer">
+<div class="container">
+    <div class="row">
+        <h1>"Code your dreams into reality—every line brings you closer to creating something amazing."</h1>
+    </div>
+</div>
+    </section>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
