--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <link rel="stylesheet" href="style.css">
 
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/3f246b6170.js" crossorigin="anonymous"></script>
 
 </head>
 
@@ -215,12 +215,24 @@
         </div>
     </div>
 
-    <section class="footer">
-<div class="container">
-    <div class="row">
-        <h1>"Code your dreams into reality—every line brings you closer to creating something amazing."</h1>
-    </div>
-</div>
+    <section class="footer py-5">
+        <div class="container">
+            <div class="row mb-3">
+                <h1 class="text-center">"Code your dreams into reality—every line brings you closer to creating
+                    something amazing."</h1>
+            </div>
+            <div class="row ">
+                <div class="col-1 circle2 m-auto justify-content-center align-items-center d-flex">
+                    <i class="fa-brands fa-square-facebook m-auto" style="font-size: 5rem; color:cornflowerblue"></i>
+
+                </div>
+
+
+            </div>
+            <div class="row">
+                <h3 class="text-center">&copy; copyrighted khalid hasan apu</h3>
+            </div>
+        </div>
     </section>
 
 
