--- a/index.html
+++ b/index.html
@@ -52,9 +52,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#POTFOLIO">POTFOLIO</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#GALLERY">GALLERY</a>
-                </li>
+                
                 <li class="nav-item">
                     <a class="nav-link" href="#CONTACT">CONTACT</a>
                 </li>
@@ -166,7 +164,7 @@
     </div>
 
     <!-- portfolio -->
-    <div class="container portfolio py-5">
+    <div class="container portfolio py-5" id="POTFOLIO">
         <div class="row">
             <h1 class="text-center display-4">Portfolio</h1>
             <hr>
@@ -194,7 +192,7 @@
     </div>
 
     <!-- contact form -->
-    <div class="container contact">
+    <div class="container contact" id="CONTACT">
         <div class="row m-auto">
             <h1 class="text-center">Contact me</h1>
         </div>
